# TomodachiDrawing

./: .gitignore  LICENSE  NOTICE  README.md  README_zh.md  ctrl.py  main.py  main_brush.py  main_fast.py  preview.py  pyproject.toml  requirements.txt  sequence_preview.py  tomodachi_common.py  webui.py
scripts/: generate_black_rect_grid_256.py  generate_color_calibration.py  generate_color_probe.py
tomodachi_drawing/: __init__.py  ctrl.py  main.py  main_brush.py  main_fast.py  nxbt_path.py  preview.py  sequence_preview.py  tomodachi_common.py  webui.py
