[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tomodachi-drawing"
version = "0.1.0"
description = "Tomodachi Life drawing macro generator and Web UI."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "click<8",
    "dbus-python>=1.2.16",
    "Flask==1.1.2",
    "itsdangerous<2",
    "Jinja2<3",
    "MarkupSafe<2.1",
    "numpy",
    "Pillow",
    "tqdm",
    "Werkzeug<2",
]

[project.scripts]
tomodachi-webui = "tomodachi_drawing.webui:main"
tomodachi-preview = "tomodachi_drawing.preview:main"
tomodachi-sequence-preview = "tomodachi_drawing.sequence_preview:main"
tomodachi-generate = "tomodachi_drawing.main:main"
tomodachi-control = "tomodachi_drawing.ctrl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tomodachi_drawing"]
